--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon -w lib -w index.js --inspect=0.0.0.0:9228 index.js"
   },
   "repository": {
     "type": "git",
@@ -26,13 +27,14 @@
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "express-winston": "^2.5.0",
-    "mailgun-js": "^0.16.0",
+    "mailgun-js": "^0.21.0",
     "moment": "^2.21.0",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.11",
     "winston": "^2.4.1"
   },
   "devDependencies": {
-    "eslint": "^4.18.2"
+    "eslint": "^4.18.2",
+    "nodemon": "^1.18.4"
   }
 }
