--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/microrealestate/emailer#readme",
   "dependencies": {
-    "axios": "0.21.1",
+    "axios": "^0.23.0",
     "body-parser": "1.19.0",
     "ejs": "2.7.4",
     "express": "4.17.1",
